Updated videos for chapter 7

--- a/06_mapping_crime_patterns/index.qmd
+++ b/06_mapping_crime_patterns/index.qmd
@@ -579,7 +579,7 @@ show densities for cells for which we actually have data.
 ```{r make-clipping-explanation-map, eval=FALSE}
 #| echo: false
 
-library(ggtext)
+pacman::p_load(ggtext)
 
 bike_thefts_sample <- bike_thefts |> 
   st_intersection(vancouver_boundary) |> 
