--- a/07_map_context/index.qmd
+++ b/07_map_context/index.qmd
@@ -107,7 +107,7 @@ You can see that -- unlike the maps we have made so far -- this map includes con
 
 Among the most important decisions you make when you are creating a map is what information to include and what to leave out. Watch this video to learn more about why this is important and how you can make those decisions.
 
-{{< video https://youtu.be/2_YOwOmodG0 >}}
+{{< video https://youtu.be/8FbywcgBpa4 >}}
 
 
 ::: {.callout-quiz .callout}
@@ -116,7 +116,42 @@ Among the most important decisions you make when you are creating a map is what 
 ```{r map-choices-quiz}
 #| echo: false
 
+map_choices_quiz1 <- c(
+  "Map design is mostly about choosing the right colors and symbols",
+  answer = "Map makers must consider their audience, the purpose of the map, and how it will be used",
+  "The most detailed maps are always the most effective",
+  "Maps should include as much information as possible to avoid confusion"
+)
+
+map_choices_quiz2 <- c(
+  "It makes the map more colorful",
+  "It makes the map less useful",
+  "It allows for more artistic expression",
+  answer = "It ensures the audience focuses on the main message"
+)
+
+map_choices_quiz3 <- c(
+  "By using symbols that are too small",
+  "By including too much detail",
+  answer = "By making large areas of color seem more important than they actually are",
+  "By leaving out street names"
+)
 ```
+
+
+**Which statement best summarizes the key points of the video?**
+
+`r webexercises::longmcq(map_choices_quiz1)`
+
+
+**What is one potential benefit of leaving out information on a map?**
+
+`r webexercises::longmcq(map_choices_quiz2)`
+
+
+**What is one way that maps can unintentionally mislead their audience?**
+
+`r webexercises::longmcq(map_choices_quiz3)`
 
 :::
 
@@ -193,7 +228,7 @@ Maps are among the most complex types of data visualisation. Even if we have cho
 
 To help readers understand what parts of a map they should focus most of their attention on and which are of less importance, we can establish a visual hierarchy. Watch this video to learn more about visual hierarchies in mapping.
 
-{{< video https://youtu.be/ezz_SPl0Xr4 >}}
+{{< video https://youtu.be/YHE0W86tnHM >}}
 
 
 ::: {.callout-quiz .callout}
@@ -202,7 +237,41 @@ To help readers understand what parts of a map they should focus most of their a
 ```{r visual-hierarchy-quiz}
 #| echo: false
 
+visual_hierarchy_quiz1 <- c(
+  "To make all elements of the map equally visible",
+  "To make maps look more colorful",
+  answer = "To guide readers’ attention to the most important elements",
+  "To eliminate unnecessary details from the map"
+)
+
+visual_hierarchy_quiz2 <- c(
+  "Isolated elements become less visible",
+  answer = "Isolated elements become more visually prominent",
+  "Isolation only affects text, not other visual elements",
+  "Isolation does not impact visual prominence"
+)
+
+visual_hierarchy_quiz3 <- c(
+  answer = "Larger text makes elements more prominent than smaller text",
+  "All text should be the same size for consistency",
+  "Smaller text is always easier to read",
+  "Text size has no impact on visual hierarchy"
+)
 ```
+
+**What is the main goal of establishing a visual hierarchy in maps?**
+
+`r webexercises::longmcq(visual_hierarchy_quiz1)`
+
+
+**How does isolation affect the prominence of an element on a map?**
+
+`r webexercises::longmcq(visual_hierarchy_quiz2)`
+
+
+**How does text size contribute to visual hierarchy?**
+
+`r webexercises::longmcq(visual_hierarchy_quiz3)`
 
 :::
 
@@ -213,7 +282,10 @@ We have used some of the principles of visual hierarchy in the maps we have alre
 
 ## Supporting elements
 
-We can often make our maps much more useful by adding supporting elements that explain the map content, give context or provide extra information. Watch this video to find out what elements you can add to your maps to make them more useful.
+We can often make our maps much more useful by adding supporting elements that explain the map content, give context or provide extra information. Supporting elements include titles, captions, legends, base maps, scale bars and north arrows.
+
+<!--
+Watch this video to find out what elements you can add to your maps to make them more useful.
 
 {{< video https://youtu.be/uXUeb-qmgTc >}}
 
@@ -228,6 +300,7 @@ We can often make our maps much more useful by adding supporting elements that e
 
 :::
 
+-->
 
 We will not need to include every supporting element mentioned in the video in all the maps we make. The visual hierarchy that you establish in your map by use of size, colour, etc. should make it clear which elements are most important. The data should always come first in the visual hierarchy, usually followed by the title and then the legend. Other elements should be lower down the hierarchy. In every map, the supporting elements should be designed so that they do not distract from the data.
 
