--- a/04_your_second_crime_map/index.qmd
+++ b/04_your_second_crime_map/index.qmd
@@ -277,7 +277,7 @@ To get started, open a blank R script file (using `File > New File > R Script`),
 #| filename: "chapter_04.R"
 
 # Load packages
-pacman::p_load(sf, sfhotspot, tidyverse)
+pacman::p_load(sf, tidyverse)
 ```
 
 The special features of spatial data -- needing to store geometries, details of the projection used etc. -- mean that spatial data is often stored in special file formats. There are lots of spatial-data formats, but fortunately almost all of them can be read by the `st_read()` function. This means we do not need to learn a different function for each spatial-data format.
@@ -620,7 +620,7 @@ So far in this chapter we have used several functions -- `read_csv()`, `clean_na
 #| filename: "chapter_04.R"
 
 # Load packages
-pacman::p_load(sf, sfhotspot, tidyverse)
+pacman::p_load(sf, tidyverse)
 
 # Load and wrangle bike theft data
 bike_thefts <- read_csv("https://mpjashby.github.io/crimemappingdata/vancouver_thefts.csv.gz") |>
@@ -786,7 +786,7 @@ At the moment, your script file should look like this.
 #| filename: "chapter_04.R"
 
 # Load packages
-pacman::p_load(sf, sfhotspot, tidyverse)
+pacman::p_load(sf, tidyverse)
 
 # Load and wrangle bike theft data
 bike_thefts <- read_csv("https://mpjashby.github.io/crimemappingdata/vancouver_thefts.csv.gz") |>
