--- a/appendices/read_functions.qmd
+++ b/appendices/read_functions.qmd
@@ -1,4 +1,4 @@
-# Functions for reading data into R #sec-load-functions
+# Functions for reading data into R {#sec-load-functions}
 
 ```{r setup}
 #| include: false
