--- a/12_messy_data/index.qmd
+++ b/12_messy_data/index.qmd
@@ -669,7 +669,7 @@ Excluding the value `-1` makes a substantial difference to the mean, increasing
 it by over £100.
 
 
-### Null Island {#null-island}
+### Null Island {#sec-null-island}
 
 The problem of missing values being stored as numbers manifests itself in a 
 particularly frustrating way when it comes to spatial data. People and 
