--- a/09_mapping_areas/index.qmd
+++ b/09_mapping_areas/index.qmd
@@ -942,6 +942,15 @@ district_pop <- read_csv("https://mpjashby.github.io/crimemappingdata/uttar_prad
 ```
 
 
+```{r}
+#| eval: false
+#| filename: "chapter09b.R"
+
+# Load district population counts
+district_pop <- read_csv("https://mpjashby.github.io/crimemappingdata/uttar_pradesh_population.csv")
+```
+
+
 If we look at the column names in this new dataset, we will see that includes a column called `district` that contains the district names. Just as we did before, we can use the `left_join()` function to add the columns from the `district_pop` dataset to the combined dataset we have already produced. To do that, let's create a pipeline that combines all the datasets one after the other:
 
 
