Add missing code to load comunas dataset in Chapter 10

--- a/10_place_data/index.qmd
+++ b/10_place_data/index.qmd
@@ -750,6 +750,9 @@ medellin_homicides <- read_csv2("https://mpjashby.github.io/crimemappingdata/med
   # Convert the data to an SF object
   st_as_sf(coords = c("longitud", "latitud"), crs = "EPSG:4326")
 
+## Load neighbourhood boundary ----
+medellin_comunas <- read_sf("https://mpjashby.github.io/crimemappingdata/medellin_comunas.gpkg") |> 
+  janitor::clean_names()
 
 ## Load metro lines ----
 
