--- a/12_messy_data/index.qmd
+++ b/12_messy_data/index.qmd
@@ -425,10 +425,10 @@ We can change the case of text using one of four `str_to_` functions:
 
 tribble(
   ~input, ~`function`, ~output,
-  "A stRinG oF TeXT", "`st_to_lower()`", str_to_lower("A stRinG oF TeXT"),
-  "A stRinG oF TeXT", "`st_to_upper()`", str_to_upper("A stRinG oF TeXT"),
-  "A stRinG oF TeXT", "`st_to_sentence()`", str_to_sentence("A stRinG oF TeXT"),
-  "A stRinG oF TeXT", "`st_to_title()`", str_to_title("A stRinG oF TeXT")
+  "A stRinG oF TeXT", "`str_to_lower()`", str_to_lower("A stRinG oF TeXT"),
+  "A stRinG oF TeXT", "`str_to_upper()`", str_to_upper("A stRinG oF TeXT"),
+  "A stRinG oF TeXT", "`str_to_sentence()`", str_to_sentence("A stRinG oF TeXT"),
+  "A stRinG oF TeXT", "`str_to_title()`", str_to_title("A stRinG oF TeXT")
 ) |> 
   knitr::kable() |> 
   kableExtra::kable_styling(full_width = FALSE)
